Complete merging & fixed some misannotations

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.vbtn.taskunite</groupId>
-    <artifactId>task-unite</artifactId>
+    <artifactId>taskunite</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Task Unite</name>
+    <name>TaskUnite</name>
 
     <repositories>
         <!-- jhipster-needle-maven-repository -->
