--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/http-loader": "4.0.0",
     "bootstrap": "4.3.1",
     "bootswatch": "4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "3.2.1",
     "moment": "2.24.0",
     "ng-jhipster": "0.11.4",
