--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "ngc": "ngc -p tsconfig-aot.json",
     "cleanup": "rimraf target/classes/static/ target/classes/aot",
     "clean-www": "rimraf target/classes/static/app/{src,target/}",
-    "start": "npm run webpack:dev",
+    "start": "npm run webpack:dev --disable-host-check",
     "start-tls": "npm run webpack:dev -- --env.tls",
     "serve": "npm run start",
     "build": "npm run webpack:prod",
